[package]
name = "rusty_v8_helper_derive"
version = "1.0.3"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Protryon/rusty_v8_helper"
description = "A rust derive macro for rusty_v8_helper"
keywords = [ "rusty_v8", "v8" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-hack = "0.5"